tests/core/snapshots/recursive-type-json.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "name": "User1",
        "id": 1,
        "friend": {
          "name": "User2",
          "id": 2,
          "friend": {
            "name": "User2",
            "id": 2
          }
        }
      }
    }
  }
}
