tests/core/snapshots/recursive-type-json.md_client.snap
---
source: tests/core/spec.rs
expression: client
---
scalar BigInt

scalar Bytes

scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Query {
  user(id: Int!): User
}

scalar UnsignedInt

scalar Url

type User {
  friend: User
  id: Int!
  name: String!
}

schema {
  query: Query
}
