tests/core/snapshots/recursive-type-json.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream(baseURL: "https://jsonplaceholder.typicode.com", httpCache: {enable: false, size: 42}) {
  query: Query
}

type Query {
  user(id: Int!): User @http(path: "/users/1")
}

type User {
  friend: User @http(path: "/friends/1")
  id: Int!
  name: String!
}

