tests/core/snapshots/recursive-types-json.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Bytes

type Connection {
  type: String
  user: User
}

input ConnectionInput {
  type: String
  user: UserInput
}

scalar Date

scalar Email

scalar Empty

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

type Mutation {
  createUser(user: UserInput): User
}

scalar PhoneNumber

type Query {
  user(id: Int!): User
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

type User {
  connections: [Connection]
  id: Int!
  name: String!
}

input UserInput {
  connections: [ConnectionInput]
  id: Int!
  name: String!
}

schema {
  query: Query
  mutation: Mutation
}
