tests/core/snapshots/recursive-types-json.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream(baseURL: "https://jsonplaceholder.typicode.com", httpCache: 42) {
  query: Query
  mutation: Mutation
}

input ConnectionInput {
  type: String
  user: UserInput
}

input UserInput {
  connections: [ConnectionInput] @http(path: "/connections/{{.value.id}}")
  id: Int!
  name: String!
}

type Connection {
  type: String
  user: User
}

type Mutation {
  createUser(user: UserInput): User @http(body: "{{.args.user}}", method: "POST", path: "/user")
}

type Query {
  user(id: Int!): User @http(path: "/users/1")
}

type User {
  connections: [Connection] @http(path: "/connections/{{.value.id}}")
  id: Int!
  name: String!
}
