tests/core/snapshots/recursive-types-no-resolver.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "No resolver has been found in the schema",
    "trace": [
      "Query",
      "user"
    ],
    "description": null
  }
]
