tests/core/snapshots/ref-other-nested.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "firstUser": {
        "user1": {
          "user2": {
            "name": "Leanne Graham"
          }
        }
      }
    }
  }
}
